--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,13 +1,21 @@
 -# navigation styled for Twitter Bootstrap 3.0
 %nav.navbar.navbar-default.navbar-fixed-top
   .container
+
     .navbar-header
-      %button.navbar-toggle{"data-target" => ".navbar-collapse", "data-toggle" => "collapse", :type => "button"}
+      %button.navbar-toggle{:'data-toggle'=>'collapse', :'data-target'=>'navbar-ex1-collapse',:type=>'button'}
         %span.sr-only Toggle navigation
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      = link_to 'Home', root_path, class: 'navbar-brand'
-    .collapse.navbar-collapse
-      %ul.nav.navbar-nav
-        = render 'layouts/navigation_links'
+      = link_to "API", root_path, :class => 'navbar-brand'
+    .collapse.navbar-collapse.navbar-ex1-collapse
+      %ul.nav.navbar-nav.pull-left
+        -if user_signed_in?
+          %li= link_to 'Logout', signout_path
+        -else
+          %li= link_to 'Login', signin_path
+        -if user_signed_in?
+          -if current_user.has_role? :admin
+            %li= link_to 'Segments', segments_path
+            %li= link_to 'Admin', users_path
